lldpd (0.9.2)
  * Change:
    + Ability to add/remove/replace custom TLV from lldpcli.
    + LLDP-MED capabilities are displayed differently in lldpcli.
  * Fix:
    + LLDP-MED POE TLV are now displayed in lldpcli.

lldpd (0.9.1)
  * Change:
    + Rework packaging for OS X to make it work with El Capitan. To
      simplify a bit, it is not possible anymore to build fat
      binaries. Latest version of OS X supporting 32bit was 10.6.
  * Fix:
    + By default, when using port alias as description, use port name
      as port ID.
    + Miscellaneous fixes with netlink cache.
    + Ensure large netlink messages can be received.

lldpd (0.9.0)
  * Change:
    + Don't rely on libnl3 for netlink. Reuse the previous code and
      implement a lighweight cache.

lldpd (0.8.0, never released)
  * Fix:
    + Fix a buffer overflow when receiving a too large management
      address TLV. Unless hardening has been disabled, this overflow
      cannot be used for arbitrary code execution.
    + Update LLDP-MED policy L2 priority values to match
      802.1Q-2005. This may be a breaking change.
  * Change:
    + PIE is now disabled by default. It's too difficult to reliably
      detect if it works. Use --enable-pie to enable it.
    + Retrieve the permanent MAC address of an interface through
      ethtool for Linux if /proc/net/bonding is not available.
    + Running lldpd with "-d" will keep the process in foreground but
      logs will still go to syslog. To log to the console, add at
      least one "-d".
    + Fix minimal kernel version to 2.6.39. Add a runtime warning when
      this is not the case.
    + Remove old bridge code (the one using ioctl).
    + Don't discard down interfaces. Notably, this enables us to keep
      their specific configuration if any.
    + For Linux, switch to libnl3. Be aware of the licensing issues in
      case of static linking.
    + Introduce the notion of default local port. New interfaces will