@@ -4,6 +4,7 @@ lldpd (0.9.2)
     + LLDP-MED capabilities are displayed differently in lldpcli.
   * Fix:
     + LLDP-MED POE TLV are now displayed in lldpcli.
+    + Ignore lower link when it is in another namespace.
 
 lldpd (0.9.1)
   * Change:
